--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@
 :root {
     --bg-color: rgb(22, 114, 206);
     --btn-bg-color: rgb(3, 166, 248);
-    --text-color-black: rgb(0, 0, 0);
+    --text-color-black: rgb(24, 22, 22);
     --text-color-white: rgb(255, 255, 255);
     --hover-color: rgb(2, 81, 121);
 }
@@ -20,11 +20,12 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     background-color: var(--bg-color);
-    color: var(--text-color); 
+    color: var(--text-color-white);
 }
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 a:hover {
@@ -107,7 +108,7 @@ li {
 }
 
 #home {
-    color: var(--main-color);
+    color: var(--text-color-black);
     background-color: var(--bg-color);
     background-position: center;
     height: 100vh;
@@ -144,8 +145,7 @@ li {
     text-align: center;
 }  
 
-.btn,
-.btn-about {
+.btn {
     display: inline-block;
     padding: 10px 20px;
     background: var(--text-color-white);
@@ -159,71 +159,17 @@ li {
     font-size: 1.4rem;
     border: none;
     margin-top: 2rem;
-}
-
-.btn:hover,
-.btn-about:hover {
+  }
+  
+  .btn:hover {
     transform: translateY(-3px);
     color: var(--bg-color);
-}
-
-#about {
-    background-color: #f8f9fa;
-    padding: 40px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-    height: calc(100vh - 100px); 
-    overflow: auto; 
-}
-
-.main-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.main-heading {
-    display: block;
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-    margin-top: 20px; 
-}
-
-.about-content {
-    display: flex;
-    justify-content: space-between; 
-    width: 100%;
-}
-
-.about-content-main {
-    flex-basis: 60%; 
-    text-align: left; 
-}
-
-.about-content-skills {
-    flex-basis: 35%; 
-}
-
-.content-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.content-paragraph {
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.btn-about{
+  }
+  
+  .btn-about {
     display: inline-block;
     padding: 10px 20px;
-    background-color: var(--bg-color); /* Blue background color */
+    background: var(--bg-color);
     color: var(--text-color-white);
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -234,26 +180,98 @@ li {
     font-size: 1.4rem;
     border: none;
     margin-top: 2rem;
-    cursor: pointer;
-}
-
-.btn-about:hover {
+  }
+  
+  .btn-about:hover {
     transform: translateY(-3px);
-    color: var(--bg-color);
+    cursor: pointer;
+  }
+  
+
+#about {
+    background-color: #f8f9fa;
+    color: var(--text-color-black);
+    height: 100vh;
+    padding: 7.26rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: start;
+    overflow: auto; 
 }
 
+.main-container {
+    max-width: 66%;
+    margin: 0 auto;
+    padding: 0 22px;
+    text-align: start;
+}
+
+.main-heading {
+    display: block;
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-bottom: 5.5rem;
+    margin-top: 22px; 
+    text-align: center;
+}
+
+.about-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15.4rem;
+    text-align: start;
+}
+
+.content-title {
+    font-size: 1.65rem;
+    font-weight: bold;
+    margin-bottom: 11px;
+    text-align: start;
+}
+
+.content-paragraph {
+    font-size: 1.1rem;
+    line-height: 1.65;
+    color: #333;
+    margin-bottom: 22px;
+    text-align: start;
+}
+
+.skills-box {
+    width: 165%;
+    background-color: white;
+    padding: 22px;
+    box-shadow: 0 0 11px rgba(0, 0, 0, 0.1);
+    text-align: start;
+}
 
 .skills-container {
-    display: flex;
-    flex-wrap: wrap;
+    width: 100%;
+    text-align: start;
+}
+
+.about-content-skills {
+    position: relative;
+    text-align: start;
 }
 
 .skill {
-    background-color: #f4f4f4;
-    color: #333;
-    padding: 8px 12px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    background-color: var(--bg-color);
+    color: var(--text-color-white);
+    padding: 12px 30px;
+    margin-bottom: 16px;
     border-radius: 5px;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
+    text-align: start;
 }
+
+.skills-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 40px;
+    text-align: start;
+}
+
+
