--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@
     --btn-bg-color: rgb(3, 166, 248);
     --text-color-black: rgb(24, 22, 22);
     --text-color-white: rgb(255, 255, 255);
-    --hover-color: rgb(2, 81, 121);
+    --hover-color: rgb(52, 159, 212);
 }
 
 body {
@@ -30,7 +30,9 @@ a {
 
 a:hover {
     color: var(--hover-color);
-    text-decoration-color: var(--bg-color);
+    text-decoration: underline;
+    text-underline-offset: .5rem;
+    text-decoration-color:var(--btn-bg-color);
 }
 
 li {
@@ -145,11 +147,11 @@ li {
     text-align: center;
 }
 
-.btn {
+.btn-home {
     display: inline-block;
     padding: 10px 20px;
     background: var(--text-color-white);
-    color: var(--text-color-black);
+    color: var(--bg-color);
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 500;
@@ -161,9 +163,11 @@ li {
     margin-top: 2rem;
 }
 
-.btn:hover {
-    transform: translateY(-3px);
+.btn-home:hover {
+    transform: translateY(-3px) scale(1.10);
     color: var(--bg-color);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
 
 .btn-about {
@@ -175,7 +179,6 @@ li {
     letter-spacing: 2px;
     font-weight: 500;
     border-radius: 6px;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
     transition: transform .3s;
     font-size: 1.4rem;
     border: none;
@@ -183,7 +186,10 @@ li {
 }
 
 .btn-about:hover {
+    background-color: var(--hover-color);
     transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
     cursor: pointer;
 }
 
@@ -217,7 +223,6 @@ li {
 
 .about-content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     grid-gap: 10rem;
     text-align: start;
 }
@@ -258,7 +263,7 @@ li {
     background-color: var(--bg-color);
     color: var(--text-color-white);
     padding: 12px 30px;
-    margin-bottom: 16px;
+    margin: 0 10px 10px 0;
     border-radius: 5px;
     font-size: 1.1rem;
 }
@@ -266,6 +271,89 @@ li {
 .skills-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     text-align: start;
+}
+
+#projects {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-title {
+    font-size: 2.2rem;
+    padding-top: 6rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 4rem;
+}
+
+.project {
+    background-color: #f0f0f0;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.project-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-img {
+    border-radius: 8px;
+    width: auto;
+    max-height: 400px;
+    margin-bottom: 1rem;
+}
+
+.project-title {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+    color: var(--text-color-black);
+}
+
+.project-p {
+    margin-bottom: 1rem;
+    color: var(--text-color-black);
+    display: flex;
+    text-align: start;
+}
+
+.project-btns {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn-github,
+.btn-demo {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease, transform .3s, box-shadow 0.3s;
+    background-color: var(--bg-color);
+    color: var(--text-color-white);
+}
+
+.btn-github:hover,
+.btn-demo:hover {
+    background-color: var(--hover-color);
+    color: var(--text-color-white);
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
