--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@
     --btn-bg-color: rgb(3, 166, 248);
     --text-color-black: rgb(24, 22, 22);
     --text-color-white: rgb(255, 255, 255);
-    --hover-color: rgb(52, 159, 212);
+    --hover-color: rgb(12, 157, 230);
 }
 
 body {
@@ -51,7 +51,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 3rem ;
+    padding: 1rem 3rem;
 }
 
 .header__logo-container {
@@ -100,7 +100,7 @@ li {
     font-size: 1rem;
     color: var(--text-color-black);
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 4px;
     font-weight: 700;
     transition: color .3s;
 }
@@ -214,16 +214,16 @@ li {
 
 .main-heading {
     display: block;
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 5.5rem;
+    margin-bottom: 5rem;
     margin-top: 22px; 
     text-align: center;
 }
 
 .about-content {
     display: grid;
-    grid-gap: 10rem;
+    grid-gap: 5rem;
     text-align: start;
 }
 
@@ -357,3 +357,62 @@ li {
     transform: translateY(-3px) scale(1.05);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
+
+#contact {
+    background-color: #f8f9fa;
+    color: var(--text-color-black);
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: start;
+    overflow: auto; 
+}
+
+#footer {
+    position: relative; /* Ensure the footer is relatively positioned */
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height:10vh; /* Adjust height for smaller footer */
+    background-color: var(--bg-color); /* Adjust background color */
+    color: var(--text-color-white); /* Adjust text color */
+    display: flex;
+    justify-content: space-between; /* Align content to the left */
+    align-items: center;
+    padding: 0 20px; 
+}
+
+.footer-p {
+    font-size: 0.8rem;
+    margin: 0;
+}
+
+.socials-container {
+    color: #fff; /* Adjust text color */
+    padding: 30px; /* Add padding */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.socials-title {
+    margin-bottom: 5px;
+    font-size: 1.5rem; /* Adjust font size */
+}
+
+.socials-icons {
+    display: flex;
+    flex-direction: row;
+}
+
+.socials-icons a {
+    text-decoration: none;
+    color: #fff; /* Adjust icon color */
+    margin-right: 10px; /* Add margin between icons */
+}
+
+.icon {
+    font-size: 1.5rem; /* Adjust icon size */
+}
+
