--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,77 @@ li {
     color: var(--hover-color);
 }
 
+#hamburger-nav {
+    display: none;
+  }
+  
+  .hamburger-nav {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+  }
+  
+  .hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+  }
+  
+  .menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+  }
+  
+  .menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+  }
+  
+  .menu-links li {
+    list-style: none;
+  }
+  
+  .menu-links.open {
+    max-height: 300px;
+  }
+  
+  .hamburger-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+  }
+  
+  .hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .hamburger-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+  }
+  
+  .hamburger-icon span:first-child {
+    transform: none;
+    opacity: 1;
+  }
+
 #home {
     color: var(--text-color-black);
     background-color: var(--bg-color);
@@ -400,7 +471,7 @@ li {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 96vh;
+    height: 97vh;
     background-color: #fff;
     text-decoration: none;
 }
@@ -445,13 +516,13 @@ li {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 4vh;
+    height: 3vh;
     background-color: var(--bg-color);
     color: var(--text-color-white);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 14px;
 }
 
 .footer-p {
