--- a/src/css/mediequeries.css
+++ b/src/css/mediequeries.css
@@ -1,17 +1,8 @@
 @media screen and (max-width: 1200px) {
-  #desktop-nav {
-    display: none;
-  }
-  #hamburger-nav {
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  #desktop-nav {
-    display: none;
-  }
-  #hamburger-nav {
-    display: flex;
-  }
+    #hamburger-nav {
+        display: block;
+    }
+    #desktop-nav {
+        display: none;
+    }
 }
