--- a/src/css/mediequeries.css
+++ b/src/css/mediequeries.css
@@ -1,8 +1,8 @@
-@media screen and (max-width: 1200px) {
-    #hamburger-nav {
-        display: block;
-    }
+@media screen and (max-width: 768px) {
     #desktop-nav {
         display: none;
+    }
+    #hamburger-nav {
+        display: flex;
     }
 }
